# Pigeon

./: .gitignore  CMakeLists.txt  README.md  clang-format-pigeon  comment  delrun  diskusage  jnl  newlab  pgn  pick  stage  vw
aperture/: CMakeLists.txt  abstract_field_updater.hpp  abstract_particle_updater.hpp  aperture.hpp  dynamic_ensemble.cpp  dynamic_variables.hpp  ensemble.cpp  field_communication.cpp  field_current_deposition.cpp  field_mesh_shape_interplay.cpp  main.cpp  particle_array.cpp  particle_forces.cpp  particle_migration.cpp  particle_pair_producer.cpp  particle_properties.hpp  particle_pusher.cpp  particle_scattering.cpp  particle_updater.cpp  particle_updater.hpp  traits.hpp
aperture/ensemble/: CMakeLists.txt  dynamic_balance.cpp  dynamic_balance.hpp  ensemble.cpp  ensemble.hpp
aperture/old_field_solver/: CMakeLists.txt  FieldUpdater.cpp  FieldUpdater.h  Fields.cpp  old_field_solver_adapter.cpp  old_field_solver_adapter.hpp
examples/: CMakeLists.txt  CMakePostamble.txt  CMakePreamble.txt  conf_log_sph_solver.toml  conf_monopole.toml  conf_pulsar.toml  conf_pulsar_old_solver.toml  gen_monopole.hpp  gen_pulsar.hpp  main_pulsar.cpp  pic.hpp  pic_impl_cartesian.hpp  pic_impl_log_sph_solver.hpp  pic_impl_monopole.hpp  pic_impl_profiling_field_solve.hpp  pic_impl_profiling_one_ensemble.hpp  pic_impl_pulsar.hpp  pic_impl_pulsar_old_solver.hpp  pic_prior_impl.hpp  tools.cmake
examples/pulsar/: gen.hpp  pic.hpp
infrastructure/: .gitignore  CMakeLists.txt  buick  pgn
infrastructure/apt/: CMakeLists.txt  action_base.hpp  apply.hpp  array.hpp  bit_manip.hpp  block.hpp  csi.hpp  foreach.hpp  grid.hpp  handle.hpp  index.hpp  numeric.hpp  pair.hpp  print.hpp  priority_queue.hpp  range.hpp  ternary.hpp  type_traits.hpp  vec.hpp  vec_expression.hpp  virtual_vec.hpp
infrastructure/filesys/: CMakeLists.txt  filesys.cpp  filesys.hpp
infrastructure/logger/: CMakeLists.txt  logger.cpp  logger.hpp  ofstream.hpp
infrastructure/mpipp/: CMakeLists.txt  mpi++.cpp  mpi++.hpp  mpi_collective.cpp  mpi_collective.hpp  mpi_collective_impl.hpp  mpi_datatype.cpp  mpi_datatype.hpp  mpi_p2p.cpp  mpi_p2p.hpp  mpi_p2p_impl.hpp  mpi_request.cpp  mpi_request.hpp
infrastructure/random/: rng.hpp
infrastructure/silopp/: .gitignore  CMakeLists.txt  combine_silos.cpp  dbtoc.cpp  pmpio.hpp  silo++.cpp  silo++.hpp  silo_datatype.hpp  silo_navigation.cpp  silo_navigation.hpp  silo_operations.cpp  silo_operations.hpp  silo_optlist.cpp  silo_optlist.hpp  silo_reader.cpp  silo_reader.hpp  silo_toc.cpp  silo_toc.hpp
infrastructure/testfw/: CMakeLists.txt  catch_main_mpi++.cpp  testfw.hpp
infrastructure/timer/: CMakeLists.txt  timer.cpp  timer.hpp
kernel/: .gitignore  CMakeLists.txt  argparser.hpp  classical_electron_radius.hpp  pigeon.hpp  simulator.cpp  simulator.hpp
kernel/apt/: CMakeLists.txt  action_base.hpp  array.hpp  block.hpp  csi.hpp  handle.hpp  index.hpp  integer_class.hpp  numeric.hpp  print.hpp  priority_queue.hpp  range.hpp  type_traits.hpp  vec.hpp
kernel/bc/: axissymmetric.hpp  fold_back_J.hpp  injection.hpp  rotating_conductor.hpp
kernel/ckpt/: CMakeLists.txt  autosave.hpp  checkpoint.cpp  checkpoint.hpp  checkpoint_helper.hpp  checkpoint_impl.hpp  ckpt_reader.cpp
kernel/data_exporter/: CMakeLists.txt  data_export.cpp  data_export.hpp  data_export_impl.hpp  test_data_export.cpp
kernel/debug/: CMakeLists.txt  compare_ptcs.hpp  debugger.cpp  debugger.hpp  nan.hpp
kernel/dye/: CMakeLists.txt  dynamic_balance.cpp  dynamic_balance.hpp  dynamic_balance_impl.hpp  ensemble.cpp  ensemble.hpp  ensemble_impl.hpp  scatter_load.hpp
kernel/field/: CMakeLists.txt  action.hpp  communication.cpp  communication_impl.hpp  field.hpp  mesh.hpp  offset.hpp  params.hpp  sync.cpp  sync.hpp  sync_impl.hpp  updater.cpp  updater.hpp  updater_impl.hpp  yee.hpp
kernel/filesys/: CMakeLists.txt  filesys.cpp  filesys.hpp
kernel/ic/: multipole.hpp
kernel/io/: CMakeLists.txt  aux.hpp  data_exporter.cpp  data_exporter.hpp  data_exporter_impl.hpp  database_writer.hpp  exportee.hpp  exportee_by_function.hpp  exportee_impl.hpp  exporter.hpp  exporter_impl.hpp  io.cpp  io.hpp  io_impl.hpp  saver.hpp
kernel/logger/: CMakeLists.txt  logger.cpp  logger.hpp  ofstream.hpp
kernel/manifold/: CMakeLists.txt  curvilinear.hpp  curvilinear_impl.hpp  grid.hpp
kernel/metric/: cartesian.hpp  log_spherical.hpp
kernel/misc/: nan.hpp
kernel/mpipp/: CMakeLists.txt  mpi++.cpp  mpi++.hpp  mpi_collective.cpp  mpi_collective.hpp  mpi_cparticle.cpp  mpi_datatype.cpp  mpi_datatype.hpp  mpi_p2p.cpp  mpi_p2p.hpp  mpi_particle.hpp  mpi_request.cpp
kernel/msh/: CMakeLists.txt  current_deposition.cpp  current_deposition_impl.hpp  mesh_shape_interplay.cpp  mesh_shape_interplay.hpp  mesh_shape_interplay_impl.hpp
kernel/particle/: CMakeLists.txt  action.hpp  annihilation.cpp  annihilation.hpp  annihilation_impl.hpp  array.cpp  array.hpp  array_impl.hpp  c_particle.hpp  flags_predef.hpp  forces.cpp  forces.hpp  forces_impl.hpp  load_type.hpp  map.hpp  migration.cpp  migration.hpp  migration_impl.hpp  mpi_particle.cpp  mpi_particle.hpp  particle.hpp  particle_expression.hpp  properties.hpp  scattering.cpp  scattering.hpp  scattering_impl.hpp  shapef.hpp  sorter.hpp  species_predef.hpp  state.hpp  updater.cpp  updater.hpp  updater_impl.hpp  virtual_particle.hpp
kernel/pic/: CMakeLists.txt  action_reserve.hpp  argparser.hpp  global.hpp  module_range.hpp  modules.hpp  pic.cpp  plans.hpp  range_conversion.hpp  simulator.hpp  stats.hpp  tracing.cpp  tracing.hpp  vitals.hpp
kernel/picgen/: CMakeLists.txt  abstract_field_updater.hpp  exportees.hpp  field_communication.cpp  field_current_deposition.cpp  field_mesh_shape_interplay.cpp  main.cpp  particle_forces.cpp  particle_migration.cpp  particle_updater.cpp  picgen.hpp
kernel/silopp/: CMakeLists.txt  dbtoc.cpp  (+12 more)
picgen/: CMakeLists.txt  field_communication.cpp  particle_scattering.cpp  particle_updater.cpp  particle_updater.hpp
src/: CMakeLists.txt  aperture.cpp  main.cpp
tests/: CMakeLists.txt  all_in_one.hpp  catch_main.cpp  catch_main_mpi++.cpp
(+441 files in other folders)
