find_package(MPI)
add_library(mpipp_lib SHARED "parallel/mpi++.cpp" "parallel/mpi_request.cpp" "parallel/mpi_datatype.cpp" "parallel/mpi_p2p.cpp" "parallel/mpi_collective.cpp")
target_include_directories(mpipp_lib PUBLIC ${MPI_INCLUDE_PATH} ${CMAKE_SOURCE_DIR}/include )
target_link_libraries(mpipp_lib PRIVATE ${MPI_LIBRARIES})
set_target_properties(mpipp_lib PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
set_target_properties(mpipp_lib PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")

find_package(Silo REQUIRED)
add_library(silo_lib SHARED "io/silo++.cpp" "io/silo_optlist.cpp" "io/silo_operations.cpp")
target_include_directories(silo_lib PRIVATE ${Silo_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/include )
target_link_libraries( silo_lib PRIVATE ${Silo_LIBRARIES} mpipp_lib)
